----------------------- Version 3.01 ---------------------------
NEW FEATURE:  AutoSync status now shown during gameplay with icon
NEW FEATURE:  added autogen icon to select music
NEW FEATURE:  toggle for easter eggs in Machine Options
NEW FEATURE:  marvelous step timing togglable in Machine Options
NEW FEATURE:  Grade AAAA (all marvelous)
CHANGE:  Only show ScreenHowToPlay if at least one player chose easy
NEW FEATURE: New High Score screen
NEW FEATURE: Full "attract" sequence
NEW FEATURE: .SM files can now contain UTF-8 text.
NEW FEATURE: New alignment tags for bitmap fonts.
NEW FEATURE: Bitmap fonts now support full Unicode mapping.
CHANGE:  Internal precision increased; 32nd notes are no longer rounded.
NEW FEATURE: Added "RANDOM" to music select.
CHANGE:  Loading optimizations.
NEW FEATURE: Caution and group select screens can now be disabled.
CHANGE:  Input, renderer and sound subsystems rewritten.
BUG FIX: Music scrollbar fixed.
CHANGE:  Faster music wheel sort changing and scrolling.
CHANGE:  Ignore invalid KSFs.
NEW FEATURE: DWI SAMPLESTART and SAMPLELENGTH in milliseconds is now
         supported.
CHANGE:  Courses are no longer limited to 300 songs.
CHANGE:  The radar display is improved.
NEW FEATURE: The Caution and Select Group screens can now be disabled.
CHANGE:  OKs now count as a step in score calculation.
CHANGE:  Maximum number of hold steps removed.
BUG FIX:  Fixed "autogen doesn't generate patterns for all difficulties for
         some songs"
BUG FIX:  Fixed incorrect "show" value in "show!hold" being written in DWIs
BUG FIX:  Fixed "song ends early after adding an edit then playing"
BUG FIX:  Oni score now displays a % sign after the score.
BUG FIX:  An E Grade is now properly awarded to a player who fails a song
          when two players are playing.
BUG FIX:  Modifiers applied to a single song in an .CRS file are no longer 
          applied to the following songs.

------------------------CVS after 3.00 beta 6rc2----------------