@@ -33,7 +33,7 @@ struct PlayerOptions
 	TurnType m_TurnType;
 	bool m_bLittle;
 	bool m_bReverseScroll;
-	enum ColorType { COLOR_VIVID=0, COLOR_NOTE, COLOR_FLAT, COLOR_PLAIN, NUM_COLOR_TYPES };
+	enum ColorType { COLOR_VIVID=0, COLOR_NOTE, COLOR_FLAT, NUM_COLOR_TYPES };
 	ColorType m_ColorType;
 	bool m_bHoldNotes;
 	bool m_bDark;
